feat: add HTTPS tunneling support for development using localtunnel. Update package.json scripts, README, and documentation to include instructions for starting the HTTPS tunnel. Enhance Profiles page to utilize the new secure URL for AI integration.

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:https": "VITE_API_URL=https://localhost:3002 vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest run --passWithNoTests --exclude '**/e2e/**'",
