--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "dev:https": "tsx watch src/index.ts & tsx watch src/dev-https.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest run --passWithNoTests",
@@ -34,9 +35,14 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/http-proxy": "^1.17.17",
+    "@types/localtunnel": "^2.0.4",
     "@types/node": "^24.10.1",
     "@types/supertest": "^6.0.3",
     "@types/winston": "^2.4.4",
+    "devcert": "^1.2.2",
+    "http-proxy": "^1.18.1",
+    "localtunnel": "^2.0.2",
     "supertest": "^7.1.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
