--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3001:3001"
     volumes:
-      - ./data:/app/data
+      - ${HOME}/.local-mcp-data:/app/data
       - ./custom-mcps:/app/custom-mcps
     environment:
       - NODE_ENV=production
@@ -25,7 +25,10 @@ services:
       context: .
       dockerfile: apps/frontend/Dockerfile
     ports:
-      - "3000:80"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ${HOME}/.local-mcp-data/certs:/etc/nginx/certs
     depends_on:
       - backend
     environment:
