--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,19 +8,21 @@
   "exports": {
     "./vitest": "./src/vitest.ts",
     "./typescript": "./src/typescript.ts",
-    "./vite": "./src/vite.ts"
+    "./vite": "./src/vite.ts",
+    "./tsdown": "./src/tsdown.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "vitest": "^4.0.8",
+    "tsdown": "^0.16.5",
+    "typescript": "^5.9.3",
     "vite": "^7.2.2",
-    "typescript": "^5.9.3"
+    "vitest": "^4.0.8"
   },
   "peerDependencies": {
-    "vitest": "^4.0.8",
     "typescript": "^5.6.3",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vitest": "^4.0.8"
   }
 }
