--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,12 @@
   "description": "Core abstractions and types for MCP proxy server",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc --build",
     "dev": "tsc --build --watch",
@@ -23,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "tsdown": "^0.16.5",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
   },
