--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2022"],
+    "lib": [
+      "ES2022"
+    ],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
@@ -23,12 +25,26 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@local-mcp/core": ["./packages/core/src"],
-      "@local-mcp/database": ["./packages/database/src"],
-      "@local-mcp/custom-mcp-loader": ["./packages/custom-mcp-loader/src"]
+      "@dxheroes/local-mcp-core": [
+        "./packages/core/src/index.ts"
+      ],
+      "@dxheroes/local-mcp-database": [
+        "./packages/database/src/index.ts"
+      ],
+      "@dxheroes/local-mcp-config": [
+        "./packages/config/src/index.ts"
+      ],
+      "@dxheroes/local-mcp-custom-mcp-loader": [
+        "./packages/custom-mcp-loader/src/index.ts"
+      ],
+      "@dxheroes/local-mcp-ui": [
+        "./packages/ui/src/index.ts"
+      ]
     }
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "dist",
