--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@local-mcp/ui",
+  "name": "@dxheroes/local-mcp-ui",
   "version": "0.1.0",
   "type": "module",
   "description": "Shared UI components based on shadcn-ui",
@@ -23,7 +23,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@local-mcp/config": "workspace:*",
+    "@dxheroes/local-mcp-config": "workspace:*",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
