feat: Introduce automated release management with release-please, consolidate CI/CD workflows, and update package metadata for publishing.

--- a/packages/custom-mcp-loader/package.json
+++ b/packages/custom-mcp-loader/package.json
@@ -2,7 +2,15 @@
   "name": "@dxheroes/local-mcp-custom-mcp-loader",
   "version": "0.1.0",
   "type": "module",
-  "description": "Dynamic loader for custom MCP servers",
+  "description": "Custom MCP server loader with hot-reloading support",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DXHeroes/local-mcp-gateway.git",
+    "directory": "packages/custom-mcp-loader"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
