--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "type": "module",
   "description": "Shared configuration for TypeScript, Vitest, and Vite",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DXHeroes/local-mcp-gateway.git",
+    "directory": "packages/config"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.mts",
   "exports": {
