--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,15 @@
   "name": "@dxheroes/local-mcp-core",
   "version": "0.1.0",
   "type": "module",
-  "description": "Core abstractions and types for Local MCP Gateway",
+  "description": "Core abstractions and utilities for MCP server management",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DXHeroes/local-mcp-gateway.git",
+    "directory": "packages/core"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
