ci: enable OIDC authentication for package publishing and remove `NODE_AUTH_TOKEN` environment variable.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,6 +6,7 @@ on:
       - main
 
 permissions:
+  id-token: write  # Required for OIDC
   contents: write
   pull-requests: write
 
@@ -47,8 +48,6 @@ jobs:
       - name: Publish packages
         if: ${{ steps.release.outputs.releases_created }}
         run: pnpm publish -r --no-git-checks
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-docker:
     name: Publish Docker Images (Production)
