--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@dxheroes/local-mcp-database",
   "version": "0.1.2",
+  "type": "module",
   "description": "Database layer for MCP server management using SQLite and Drizzle ORM",
   "repository": {
     "type": "git",
