docs: Revise AGENTS.md for project overview, setup instructions, and development workflows; add mandatory engineering practices and code quality guidelines.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,11 @@
 packages:
-  - 'packages/*'
-  - 'apps/*'
+  - packages/*
+  - apps/*
 
+onlyBuiltDependencies:
+  - '@prisma/client'
+  - bcrypt
+  - better-sqlite3
+  - esbuild
+  - msw
+  - sharp
