chore: Update database seed and create scripts in package.json; add directory existence check for database file paths in database.ts

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "docker:down": "docker-compose down",
     "create-custom-mcp": "node scripts/create-custom-mcp.js",
     "create-package": "node scripts/create-package.js",
-    "db:seed": "pnpm --filter @local-mcp/database seed",
+    "db:seed": "pnpm --filter @dxheroes/local-mcp-database seed",
+    "db:create": "pnpm --filter @dxheroes/local-mcp-database migrate",
     "db:reset": "rm -f ~/.local-mcp-gateway-data/local-mcp-gateway.db && pnpm db:seed"
   },
   "keywords": [
