--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -128,6 +128,7 @@ jobs:
           file: apps/backend/Dockerfile
           push: true
           tags: |
+            dxheroes/local-mcp-gateway-backend:latest
             dxheroes/local-mcp-gateway-backend:${{ github.sha }}
 
       - name: Build and push Frontend
@@ -137,4 +138,5 @@ jobs:
           file: apps/frontend/Dockerfile
           push: true
           tags: |
+            dxheroes/local-mcp-gateway-frontend:latest
             dxheroes/local-mcp-gateway-frontend:${{ github.sha }}
