feat: Add gemini-deep-research package with repository details and public publish configuration; update release-please config to include new package.

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -3,8 +3,8 @@
     "packages/config": {},
     "packages/core": {},
     "packages/database": {},
-    "packages/custom-mcp-loader": {},
-    "packages/ui": {}
+    "packages/ui": {},
+    "mcp-servers/gemini-deep-research": {}
   },
   "release-type": "node",
   "bump-minor-pre-major": true,
