--- a/mcp-servers/gemini-deep-research/package.json
+++ b/mcp-servers/gemini-deep-research/package.json
@@ -23,6 +23,14 @@
   "keywords": ["mcp", "local-mcp-gateway", "gemini", "research", "ai"],
   "author": "DX Heroes",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DXHeroes/local-mcp-gateway.git",
+    "directory": "mcp-servers/gemini-deep-research"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@dxheroes/local-mcp-core": "workspace:*"
   },
