chore: Update release-please workflow to include provenance and public access flags for package publishing

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -47,7 +47,7 @@ jobs:
       
       - name: Publish packages
         if: ${{ steps.release.outputs.releases_created }}
-        run: pnpm publish -r --no-git-checks
+        run: pnpm publish -r --no-git-checks --provenance --access public
 
   publish-docker:
     name: Publish Docker Images (Production)
