--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -48,6 +48,8 @@ jobs:
       - name: Publish packages
         if: ${{ steps.release.outputs.releases_created }}
         run: pnpm publish -r --no-git-checks --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-docker:
     name: Publish Docker Images (Production)
