--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -35,15 +35,9 @@ jobs:
       - uses: actions/setup-node@v4
         if: ${{ steps.release.outputs.releases_created }}
         with:
-          node-version: "22"
+          node-version: "20"
           cache: "pnpm"
           registry-url: 'https://registry.npmjs.org'
-      
-      - name: Verify npm supports OIDC
-        if: ${{ steps.release.outputs.releases_created }}
-        run: |
-          echo "Node version: $(node --version)"
-          echo "npm version: $(npm --version)"
       
       - run: pnpm install --frozen-lockfile
         if: ${{ steps.release.outputs.releases_created }}
@@ -53,7 +47,9 @@ jobs:
       
       - name: Publish packages
         if: ${{ steps.release.outputs.releases_created }}
-        run: pnpm publish -r --no-git-checks --provenance --access public
+        run: pnpm publish -r --no-git-checks --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-docker:
     name: Publish Docker Images (Production)
