--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -58,6 +58,9 @@ jobs:
     if: ${{ needs.release-please.outputs.releases_created }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
