--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
+      prs_created: ${{ steps.release.outputs.prs_created }}
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
@@ -50,6 +51,44 @@ jobs:
         run: pnpm publish -r --no-git-checks --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  publish-docker-edge:
+    name: Publish Docker Images (Edge)
+    runs-on: ubuntu-latest
+    needs: release-please
+    # Run when PR was created/updated BUT release was NOT created
+    if: ${{ needs.release-please.outputs.prs_created == 'true' && needs.release-please.outputs.releases_created != 'true' }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Backend (Edge)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/backend/Dockerfile
+          push: true
+          tags: |
+            dxheroes/local-mcp-gateway-backend:edge
+            dxheroes/local-mcp-gateway-backend:${{ github.sha }}
+
+      - name: Build and push Frontend (Edge)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/frontend/Dockerfile
+          push: true
+          tags: |
+            dxheroes/local-mcp-gateway-frontend:edge
+            dxheroes/local-mcp-gateway-frontend:${{ github.sha }}
 
   publish-docker:
     name: Publish Docker Images (Production)
@@ -87,7 +126,6 @@ jobs:
           tags: |
             dxheroes/local-mcp-gateway-backend:latest
             dxheroes/local-mcp-gateway-backend:${{ steps.version.outputs.version }}
-            dxheroes/local-mcp-gateway-backend:${{ github.sha }}
 
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
@@ -98,4 +136,3 @@ jobs:
           tags: |
             dxheroes/local-mcp-gateway-frontend:latest
             dxheroes/local-mcp-gateway-frontend:${{ steps.version.outputs.version }}
-            dxheroes/local-mcp-gateway-frontend:${{ github.sha }}
