--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -127,7 +127,7 @@ jobs:
     name: Publish Docker Images (Production)
     runs-on: ubuntu-latest
     needs: release-please
-    if: ${{ needs.release-please.outputs.releases_created }}
+    if: ${{ needs.release-please.outputs.releases_created == 'true' }}
     steps:
       - uses: actions/checkout@v4
         with:
