--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -113,6 +113,7 @@ jobs:
           context: .
           file: apps/backend/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             dxheroes/local-mcp-gateway-backend:edge
             dxheroes/local-mcp-gateway-backend:${{ github.sha }}
@@ -123,6 +124,7 @@ jobs:
           context: .
           file: apps/frontend/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             dxheroes/local-mcp-gateway-frontend:edge
             dxheroes/local-mcp-gateway-frontend:${{ github.sha }}
@@ -161,6 +163,7 @@ jobs:
           context: .
           file: apps/backend/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             dxheroes/local-mcp-gateway-backend:latest
             dxheroes/local-mcp-gateway-backend:${{ steps.version.outputs.version }}
@@ -171,6 +174,7 @@ jobs:
           context: .
           file: apps/frontend/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             dxheroes/local-mcp-gateway-frontend:latest
             dxheroes/local-mcp-gateway-frontend:${{ steps.version.outputs.version }}
