chore: update release-please configuration and CI workflow
- Enhanced `.github/release-please-config.json` to include component mapping for packages.
- Modified CI workflow in `.github/workflows/release-please.yml` to streamline release process and publish conditions.
- Removed unnecessary steps and improved package publishing logic to skip existing versions.

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,10 +1,27 @@
 {
+  "plugins": [
+    {
+      "type": "node-workspace",
+      "updateAllPackages": true
+    }
+  ],
+  "include-component-in-tag": true,
   "packages": {
-    "packages/config": {},
-    "packages/core": {},
-    "packages/database": {},
-    "packages/ui": {},
-    "mcp-servers/gemini-deep-research": {}
+    "packages/config": {
+      "component": "config"
+    },
+    "packages/core": {
+      "component": "core"
+    },
+    "packages/database": {
+      "component": "database"
+    },
+    "packages/ui": {
+      "component": "ui"
+    },
+    "mcp-servers/gemini-deep-research": {
+      "component": "mcp-gemini-deep-research"
+    }
   },
   "release-type": "node",
   "bump-minor-pre-major": true,
