--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,19 +6,16 @@ on:
       - main
 
 permissions:
-  id-token: write  # Required for OIDC
+  id-token: write
   contents: write
   pull-requests: write
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
-    # Only run on push to main, not on PRs
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     outputs:
-      releases_created: ${{ steps.release.outputs.releases_created }}
-      prs_created: ${{ steps.release.outputs.prs_created }}
-      pr_branch: release-please--branches--main
+      any_released: ${{ steps.release.outputs.releases_created }}
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
@@ -27,20 +24,15 @@ jobs:
           config-file: .github/release-please-config.json
           manifest-file: .release-please-manifest.json
 
-  publish-npm-prerelease:
-    name: Publish NPM Packages (Pre-release)
+  publish-npm:
+    name: Publish NPM Packages
     runs-on: ubuntu-latest
     needs: release-please
-    # Run when release-please creates/updates a PR (not when release is created)
-    if: needs.release-please.outputs.prs_created == 'true'
+    if: needs.release-please.outputs.any_released == 'true'
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.release-please.outputs.pr_branch }}
 
       - uses: pnpm/action-setup@v4
-        with:
-          version: 10.22.0
 
       - uses: actions/setup-node@v4
         with:
@@ -52,99 +44,34 @@ jobs:
 
       - run: pnpm build
 
-      # Update versions to pre-release (e.g., 0.1.2 -> 0.1.2-beta.123)
-      - name: Set pre-release versions
+      # Publish all packages, skip if version already exists
+      - name: Publish packages
         run: |
-          pnpm -r exec -- npm version prerelease --preid=beta.${{ github.run_number }} --no-git-tag-version || true
+          for pkg in packages/config packages/core packages/database packages/ui mcp-servers/gemini-deep-research; do
+            cd "$pkg"
+            PKG_NAME=$(node -p "require('./package.json').name")
+            PKG_VERSION=$(node -p "require('./package.json').version")
 
-      # Publish with 'next' tag (not 'latest')
-      - name: Publish pre-release packages
-        run: pnpm publish -r --no-git-checks --access public --tag next
+            # Check if version exists on npm
+            if npm view "${PKG_NAME}@${PKG_VERSION}" version 2>/dev/null; then
+              echo "⏭️  Skipping ${PKG_NAME}@${PKG_VERSION} (already exists)"
+            else
+              echo "📦 Publishing ${PKG_NAME}@${PKG_VERSION}"
+              pnpm publish --no-git-checks --access public
+            fi
+            cd - > /dev/null
+          done
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-  publish-npm-stable:
-    name: Publish NPM Packages (Stable)
-    runs-on: ubuntu-latest
-    needs: release-please
-    # Run on push to main when release was created (release-please PR merged)
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.release-please.outputs.releases_created == 'true'
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10.22.0
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "22"
-          cache: "pnpm"
-          registry-url: 'https://registry.npmjs.org'
-
-      - run: pnpm install --frozen-lockfile
-
-      - run: pnpm build
-
-      - name: Publish stable packages
-        run: pnpm publish -r --no-git-checks --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-  publish-docker-edge:
-    name: Publish Docker Images (Edge)
-    runs-on: ubuntu-latest
-    needs: release-please
-    # Run when release-please creates/updates a PR
-    if: needs.release-please.outputs.prs_created == 'true'
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.release-please.outputs.pr_branch }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Backend (Edge)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: apps/backend/Dockerfile
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            dxheroes/local-mcp-gateway-backend:edge
-            dxheroes/local-mcp-gateway-backend:${{ github.sha }}
-
-      - name: Build and push Frontend (Edge)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: apps/frontend/Dockerfile
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            dxheroes/local-mcp-gateway-frontend:edge
-            dxheroes/local-mcp-gateway-frontend:${{ github.sha }}
 
   publish-docker:
-    name: Publish Docker Images (Production)
+    name: Publish Docker Images
     runs-on: ubuntu-latest
     needs: release-please
-    # Run on push to main when release was created (release-please PR merged)
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.release-please.outputs.releases_created == 'true'
+    if: needs.release-please.outputs.any_released == 'true'
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -154,12 +81,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract version from tag
+      - name: Set version
         id: version
         run: |
-          # Get the latest tag created by release-please
-          VERSION=$(git describe --tags --abbrev=0)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
+          echo "sha=$SHORT_SHA" >> $GITHUB_OUTPUT
+          echo "date=$(date +'%Y%m%d')" >> $GITHUB_OUTPUT
 
       - name: Build and push Backend
         uses: docker/build-push-action@v5
@@ -170,7 +97,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             dxheroes/local-mcp-gateway-backend:latest
-            dxheroes/local-mcp-gateway-backend:${{ steps.version.outputs.version }}
+            dxheroes/local-mcp-gateway-backend:${{ steps.version.outputs.date }}-${{ steps.version.outputs.sha }}
 
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
@@ -181,4 +108,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             dxheroes/local-mcp-gateway-frontend:latest
-            dxheroes/local-mcp-gateway-frontend:${{ steps.version.outputs.version }}
+            dxheroes/local-mcp-gateway-frontend:${{ steps.version.outputs.date }}-${{ steps.version.outputs.sha }}
