--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -27,7 +27,8 @@ FROM nginx:alpine
 # Copy built files
 COPY --from=builder /app/apps/frontend/dist /usr/share/nginx/html
 
-# Copy nginx config
+# Copy nginx configs
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
 COPY nginx/docker.conf /etc/nginx/conf.d/default.conf
 
 # Health check
