--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     environment:
       - NODE_ENV=production
       - DATABASE_URL=file:/data/local-mcp-gateway.db
+      - LOG_LEVEL=log
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health"]
       interval: 30s
@@ -41,6 +42,8 @@ services:
     container_name: local-mcp-frontend-dev
     ports:
       - "3000:80"
+    environment:
+      - NGINX_ENTRYPOINT_QUIET_LOGS=1
     depends_on:
       backend:
         condition: service_healthy
